# kata-inference-251021-clean

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  log_partial.txt  main.py  pyproject.toml  run_inference.py
adeline/: .gitignore  AGENTS.md  ANALISIS_ARQUITECTURA_GABY.md  ANALISIS_MODULARIZACION_WHITEBOARD.md  BLUEPRINT_FUTUROS_COPILOTS.md  CLAUDE.md  CONSULTORIA_DISEÑO.md  DESIGN.md  EXAMPLES.md  IMPROVEMENTS.md  INDICE_MAESTRO_DOCUMENTACION.md  INFORME_CONSULTORIA_DISENIO.md  MANIFESTO_DISENO.md  PLAN_MEJORAS.md  PLAN_QUICK_WINS.md  QUICK_WINS_IMPLEMENTADOS.md  README.md  RESUMEN_SESION_MODULARIZACION.md  TEST_CASES_FUNCIONALES.md  __init__.py  __main__.py  config.py  env_setup.py  legacy_config.py  log.json  logging.py  mqtt_status_monitor.py  mypy.ini  pytest.ini  requirements.txt  run_pipeline.py  test_pydantic_validation.py
adeline/adeline/: __init__.py
adeline/app/: __init__.py  builder.py  controller.py
adeline/config/: __init__.py  schemas.py
adeline/control/: __init__.py  __main__.py  plane.py  registry.py
adeline/data/: __init__.py  plane.py  sinks.py
adeline/inference/: __init__.py  loader.py  models.py
adeline/scripts/: validate.sh
adeline/tests/: README.md  __init__.py  test_config_validation.py  test_mqtt_commands.py  test_multi_object_tracking.py  test_pipeline_lifecycle.py  test_roi.py  test_stabilization.py
adeline/visualization/: __init__.py  sinks.py
config/adeline/: config.yaml.example  config.yaml.sample
docker/adeline/: mosquitto.conf
docs/: README.md
scripts/: README.md  export_onnx_models.py
(+131 files in other folders)
